--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -3,25 +3,26 @@
 - type: github
   icon: "fab fa-github"
 
-- type: twitter
-  icon: "fa-brands fa-x-twitter"
+- type: linkdin
+  icon: "fab fa-linkedin"
+  url: "https://www.linkedin.com/in/rafa-pereira/"
 
-- type: email
-  icon: "fas fa-envelope"
-  noblank: true # open link in current tab
+- type: link
+  icon: "fas fa-skull-crossbones"
+  url: "https://tryhackme.com/p/RaspWhiteHat"
 
-- type: rss
-  icon: "fas fa-rss"
-  noblank: true
+- type: link
+  icon: "fas fa-shield-alt"
+  url: "https://cyberdefenders.org/p/RaspWhiteHat#/overview"
+
+#- type: rss
+#  icon: "fas fa-rss"
+#  noblank: true
 # Uncomment and complete the url below to enable more contact options
 #
 # - type: mastodon
 #   icon: 'fab fa-mastodon'   # icons powered by <https://fontawesome.com/>
 #   url:  ''                  # Fill with your Mastodon account page, rel="me" will be applied for verification
-#
-# - type: linkedin
-#   icon: 'fab fa-linkedin'   # icons powered by <https://fontawesome.com/>
-#   url:  ''                  # Fill with your Linkedin homepage
 #
 # - type: stack-overflow
 #   icon: 'fab fa-stack-overflow'
