--- a/_config.yml
+++ b/_config.yml
@@ -45,33 +45,33 @@ social:
     - https://www.linkedin.com/in/rafa-pereira
 
 # Site Verification Settings
-webmaster_verifications:
-  google: # fill in your Google verification code
-  bing: # fill in your Bing verification code
-  alexa: # fill in your Alexa verification code
-  yandex: # fill in your Yandex verification code
-  baidu: # fill in your Baidu verification code
-  facebook: # fill in your Facebook verification code
+#webmaster_verifications:
+  #google: # fill in your Google verification code
+  #bing: # fill in your Bing verification code
+  #alexa: # fill in your Alexa verification code
+  #yandex: # fill in your Yandex verification code
+  #baidu: # fill in your Baidu verification code
+  #facebook: # fill in your Facebook verification code
 
 # ↑ --------------------------
 # The end of `jekyll-seo-tag` settings
 
 # Web Analytics Settings
-analytics:
-  google:
-    id: # fill in your Google Analytics ID
-  goatcounter:
-    id: # fill in your GoatCounter ID
-  umami:
-    id: # fill in your Umami ID
-    domain: # fill in your Umami domain
-  matomo:
-    id: # fill in your Matomo ID
-    domain: # fill in your Matomo domain
-  cloudflare:
-    id: # fill in your Cloudflare Web Analytics token
-  fathom:
-    id: # fill in your Fathom Site ID
+#analytics:
+  #google:
+  #  id: # fill in your Google Analytics ID
+  #goatcounter:
+  #  id: # fill in your GoatCounter ID
+  #umami:
+  #  id: # fill in your Umami ID
+  #  domain: # fill in your Umami domain
+  #matomo:
+  #  id: # fill in your Matomo ID
+  # domain: # fill in your Matomo domain
+  #cloudflare:
+  #  id: # fill in your Cloudflare Web Analytics token
+  #fathom:
+  #  id: # fill in your Fathom Site ID
 
 # Page views settings
 pageviews:
